--- a/src/components/HomeComponent.module.css
+++ b/src/components/HomeComponent.module.css
@@ -16,11 +16,27 @@
   color: white;
   font-weight: bold;
   background-color: black;
-  top: 20%; /* Adjust this value to move the positioned div up and down */
+  top: 80%; /* Adjust this value to move the positioned div up and down */
   text-align: center;
   width: 50%; /* Set the width of the positioned div */
+  opacity: 0.7;
 }
 
-.block {
+.AboutInfo {
   display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 20px;
+}
+.AboutText {
+  text-align: left;
+  padding: 10px;
+  margin-right: 10px;
+}
+
+.AboutInfo img {
+  width: 40%;
+}
+h3 {
+  text-align: center;
 }
