--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,8 @@
   /* justify-content: flex-end; */
   font-size: 20px;
 
+  font-family: "Nunito", sans-serif;
+
   /* padding-top: 20px;
   padding-bottom: 20px; */
   /* position: fixed; */
@@ -47,7 +49,9 @@
 .navbar a:hover {
   /* border-bottom: 2px solid blue; */
   font-weight: bold;
+
   color: #f47621;
+  text-decoration: none;
 }
 
 /* .NavButton {
