--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 10px;
-  width: 45%;
+  width: 40%;
   margin: 0 auto;
 }
 
@@ -34,4 +34,11 @@
 .Form button:hover {
   background-color: #f47621 !important;
   font-weight: bold;
+}
+
+@media (max-width: 500px) {
+  .Form {
+    width: 75%;
+    margin-top: 15px;
+  }
 }
