--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -50,7 +50,7 @@
   /* border-bottom: 2px solid blue; */
   font-weight: bold;
 
-  color: #f47621;
+  color: #f47621 !important;
   text-decoration: none;
 }
 
