--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -13,9 +13,12 @@
   text-align: left;
   font-size: 15px;
 }
+.Header {
+  color: #fff;
+}
 .Form textarea {
   background-color: lightgray;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   width: 100%;
   text-align: left;
   font-size: 15px;
@@ -40,5 +43,8 @@
   .Form {
     width: 75%;
     margin-top: 15px;
+  }
+  .Header {
+    text-align: center;
   }
 }
