added phone numbers

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -50,6 +50,8 @@ h4 {
 .PhoneNumber {
   text-decoration: none;
   color: #f47621 !important;
+  display: flex;
+  flex: wrap;
 }
 /* can chagne the color */
 .PhoneNumber:hover {
