--- a/src/components/HomeComponent/HomeComponent.module.css
+++ b/src/components/HomeComponent/HomeComponent.module.css
@@ -1,10 +1,13 @@
 .Container {
   position: relative;
   margin: 0 auto;
+
   /* display: inline-block; */
 }
 .Container img {
   width: 50%;
+  margin: 0;
+  height: 100%;
 }
 
 .Container .text {
@@ -18,9 +21,9 @@
   color: white;
   font-weight: bold;
   background-color: black;
-  top: 80%; /* Adjust this value to move the positioned div up and down */
+  top: 90%; /* Adjust this value to move the positioned div up and down */
   text-align: center;
-  width: 30%; /* Set the width of the positioned div */
+  width: 50%; /* Set the width of the positioned div */
   opacity: 0.7;
 }
 
@@ -28,7 +31,7 @@
   display: flex;
   /* justify-items: auto; */
   width: 100%;
-
+  max-height: 400px;
   margin-top: 20px;
   font-family: "Nunito", sans-serif;
   padding: 10px;
