--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,11 +1,13 @@
 .Footer {
   display: flex;
   padding: 10px;
+  justify-content: space-around;
   margin-top: 10px;
   text-align: left;
-  margin: 10px;
+  /* margin: 10px; */
   background-color: #262626;
   color: #ccc;
+  margin: 0;
 }
 
 p {
@@ -47,18 +49,26 @@ h4 {
   color: #fff;
 }
 
+.Phone {
+  display: flex;
+  flex-direction: column;
+  flex: wrap;
+}
+
 .PhoneNumber {
   text-decoration: none;
   color: #f47621 !important;
-  display: flex;
-  flex: wrap;
+  text-align: left;
+
+  /* display: flex; */
 }
 /* can chagne the color */
 .PhoneNumber:hover {
-  color: red !important;
+  color: #ccc !important;
 }
 @media (max-width: 500px) {
   .Footer {
+    display: block;
     flex-wrap: wrap;
   }
   .LocationBlock {
