added photos to about and inside salon

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -59,6 +59,7 @@ h4 {
   text-decoration: none;
   color: #f47621 !important;
   text-align: left;
+  /* font-feature-settings: "tnum" !important; */
 
   /* display: flex; */
 }
