--- a/src/components/PhotoSlideShow/PhotoSlideShow.module.css
+++ b/src/components/PhotoSlideShow/PhotoSlideShow.module.css
@@ -1,7 +1,11 @@
-.PhotoSlideShow {
+/* .PhotoSlideShow {
   width: 10% !important;
 }
 
 .PhotoSlideShow img {
   width: 10% !important;
 }
+
+.Carousel {
+  height: 30%;
+} */
