--- a/src/components/TableComponent/TableComponent.module.css
+++ b/src/components/TableComponent/TableComponent.module.css
@@ -8,6 +8,8 @@
 
 .Price {
   text-align: left;
+  font-weight: bold;
+  font-family: "Nunito", sans-serif;
 }
 
 .Table {
@@ -18,6 +20,7 @@
   width: 50%;
   margin: 0 auto;
   font-size: 20px;
+  font-family: "Nunito", sans-serif;
 }
 
 .Table tr:nth-child(odd) {
@@ -34,6 +37,7 @@
 
 .Heading {
   text-align: center;
+  font-family: "Nunito", sans-serif;
 }
 
 @media (max-width: 500px) {
