--- a/src/components/ImageComponent/ImageComponent.module.css
+++ b/src/components/ImageComponent/ImageComponent.module.css
@@ -1,5 +1,5 @@
 .Image {
-  width: 100%;
-  height: 100%;
-  max-height: 300px;
+  width: 100% !important;
 }
+/* .Container {
+  /* position: fixed; */
