added transparent logo

--- a/src/components/HomeComponent/HomeComponent.module.css
+++ b/src/components/HomeComponent/HomeComponent.module.css
@@ -1,11 +1,16 @@
+/* #logo {
+  height: 400%;
+  width: 400%;
+} */
+
 .Container {
   position: relative;
   margin: 0 auto;
   /* display: inline-block; */
 }
-.Container img {
+/* .Container img {
   width: 50%;
-}
+} */
 
 .Container .text {
   font-family: "Nunito", sans-serif;
