--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,10 @@
 .navbar {
-  background: #fff;
+  /* background: #fff; */
+  /* background-image: linear-gradient(
+    rgb(191, 104, 104),
+    rgb(250, 250, 237),
+    rgb(93, 93, 238)
+  ); */
   width: 100%;
   display: flex;
   /* text-align: right !important;
