--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #000000;
-  background-color: #f9f7f6;
+  /* background-color: #f9f7f6; */
+
+  /* background-image: url("./assets/images/Background_Image/backgroundImage.jpg");
+  /* background-size: cover; */
+  /* background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center; */
+  /* overflow: hidden; */
+  /* backgroundSize: 'cover',
+  overflow: 'hidden', */
+  /* background-image: linear-gradient(
+    rgb(191, 104, 104),
+    rgb(250, 250, 237),
+    rgb(93, 93, 238)
+  ); */
   font-family: "Nunito", sans-serif;
 }
 
