--- a/src/components/HomeComponent/HomeComponent.module.css
+++ b/src/components/HomeComponent/HomeComponent.module.css
@@ -1,8 +1,3 @@
-#logo {
-  height: 40px;
-  /* width: 40%; */
-}
-
 .Container {
   position: relative;
   margin: 0 auto;
@@ -56,8 +51,13 @@
 .AboutInfo img {
   width: 50%;
 }
-h3 {
+h2 {
   text-align: center;
+}
+
+#logo {
+  height: 40%;
+  width: 5%;
 }
 
 @media (max-width: 500px) {
