--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,6 +10,16 @@
   background-color: #262626;
   color: #ccc;
   margin: 0;
+  /* position: absolute; */
+
+  position: sticky;
+  bottom: 0;
+  left: 0;
+
+  /* position: absolute; */
+  /* bottom: 0; */
+  /* width: 100%; */
+  /* height: 2.5rem; */
 }
 
 p {
