--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,3 +1,8 @@
+/* .Container {
+  position: relative;
+  min-height: auto;
+} */
+
 .Footer {
   display: flex;
   padding: 10px;
@@ -12,7 +17,7 @@
   margin: 0;
   /* position: absolute; */
 
-  position: sticky;
+  /* position: absolute; */
   bottom: 0;
   left: 0;
 
