--- a/src/components/HomeComponent/HomeComponent.module.css
+++ b/src/components/HomeComponent/HomeComponent.module.css
@@ -4,14 +4,22 @@
 
   /* display: inline-block; */
 }
+/* .carousel img {
+  width: 100% !important;
+  min-width: 100 !important;
+  height: auto; */
 
-.Container img {
+.Image {
+  background-size: cover;
+  background-position: 50% 50%;
   width: 100%;
-  margin: 0;
   height: 100%;
 }
+/* .Container img {
+  width: 20px;
+} */
 
-.Container .text {
+.text {
   font-family: "Nunito", sans-serif;
 
   position: absolute;
@@ -22,7 +30,7 @@
   color: white;
   font-weight: bold;
   background-color: black;
-  top: 90%; /* Adjust this value to move the positioned div up and down */
+  top: 10%; /* Adjust this value to move the positioned div up and down */
   text-align: center;
   width: 50%; /* Set the width of the positioned div */
   opacity: 0.7;
@@ -56,6 +64,13 @@ h2 {
   text-align: center;
 }
 
+.InsideMain {
+  width: 100%;
+  margin-top: 15px;
+  /* margin-bottom: 15px; */
+  padding: 10px;
+  margin: 0 auto;
+}
 /* #logo {
   height: 40%;
   width: 5%;
@@ -65,8 +80,13 @@ h2 {
   .AboutInfo {
     flex-direction: column;
   }
-  .Container img {
+  .InsideMain {
+    height: auto;
     width: 100%;
+  }
+  .Image {
+    width: auto;
+    height: 300px;
   }
 
   .AboutInfo img {
@@ -77,8 +97,11 @@ h2 {
     margin-bottom: 10px;
   }
 
-  .Container .text {
+  .text {
     width: 100%;
-    top: 100%;
+
+    font-size: 1rem;
+    text-overflow: clip;
+    position: absolute;
   }
 }
